# django-simpleui-captcha

./: LICENSE  MANIFEST.in  README.md  setup.cfg
simpleui_captcha/: admin.py  apps.py  forms.py  settings.py  urls.py  views.py
simpleui_captcha/templates/admin/: login.html
